fix invisible 'number of items' in search bar

--- a/css/uchiwa-dark/uchiwa-dark.css
+++ b/css/uchiwa-dark/uchiwa-dark.css
@@ -1002,7 +1002,7 @@ li.timestamp .relative-timestamp {
   font-size: 22px; }
 
 .search-results {
-  color: #FFFFFF;
+  color: #4D4D4D;
   position: absolute;
   height: auto;
   top: 0;
